--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -1,89 +1,27 @@
----
-// src/pages/api/sendEmail.js
+<div class="flex flex-col justify-center items-center p-32 mt-48 mb-48" id="Contact">
+    <h2  class="text-complementario text-3xl mb-4 relative inline-block font-bold after:content-[''] after:block after:w-full after:h-[2px] after:bg-complementario after:ml-4 after:mt-2">Ponte en contacto</h2>
+    <p class="text-center mt-4 text-lg mb-10 text-gray-300">Actualmente, estoy en busca de nuevas oportunidades laborales. Si tienes alguna propuesta, duda o simplemente deseas ponerte en contacto, no dudes en escribirme. Estoy siempre dispuesto a responder y encantado de conocer nuevas ideas o colaborar en proyectos interesantes. ¡No dudes en contactarme, estaré encantado de hablar contigo!</p>
+    <button class="inline-block text-center w-40 h-16 border-2 border-gray-300 text-gray-300 font-semibold rounded-lg transform transition-all duration-300 hover:translate-y-[-4px] hover:shadow-lg hover:shadow-gray-300" id="open" >
+        Contacto
+    </button>
+</div>
 
-import { sendEmail } from '../pages/api/test'; // Asegúrate de tener esta función para enviar el correo
-
-export async function post({ request }: { request: Request }) {
-  const payload = await request.json();
-
-  const { name, email, message } = payload;
-
-  if (!name || !email || !message) {
-    return new Response(JSON.stringify({ error: 'Missing fields' }), { status: 400 });
-  }
-
-  try {
-    await sendEmail({ name, email, message, html: `<p>${message}</p>` });
-    return new Response(JSON.stringify({ success: true }), { status: 200 });
-  } catch (error) {
-    return new Response(JSON.stringify({ error: (error as any).message }), { status: 500 });
-  }
-}
-
-
----
-<button class="bg-blue-500 text-white px-4 py-2 rounded" id="open" >
-    Open Form
-</button>
 
 <!-- Modal de formulario de contacto -->
 <div id="modal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
-    <div class="bg-white p-6 rounded shadow-lg w-1/3">
-        <h2 class="text-xl mb-4">Contact Us</h2>
-        <iframe style="border:none;width:100%;" id="untitled-form-zkrdm8" src="https://opnform.com/forms/untitled-form-zkrdm8"></iframe><script type="text/javascript" onload="initEmbed('untitled-form-zkrdm8')" src="https://opnform.com/widgets/iframe.min.js"></script>
-        <!-- <form id="contactForm" method="post">
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
-                    Name
-                </label>
-                <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="name"
-                    type="text"
-                    placeholder="Your name"
-                    required
-                />
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-                    Email
-                </label>
-                <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="email"
-                    type="email"
-                    placeholder="Your email"
-                    required
-                />
-            </div>
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="message">
-                    Message
-                </label>
-                <textarea
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="message"
-                    placeholder="Your message"
-                    required
-                ></textarea>
-            </div>
-            <div class="flex items-center justify-between">
-                <button
-                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="submit"
-                >
-                    Send
-                </button>
 
-            </div>
-        </form> -->
+    <div class="bg-white p-6 rounded shadow-lg w-1/3 flex items-end flex-col">
+
         <button
-        class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+        class=" dark:text-white text-black font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
         type="button"
-       id="close"
-    >
-        Close
-    </button>
+        id="close"
+      >
+        X
+      </button>
+        <iframe style="border:none;width:100%;" id="untitled-form-zkrdm8" src="https://opnform.com/forms/untitled-form-zkrdm8"></iframe><script type="text/javascript" onload="initEmbed('untitled-form-zkrdm8')" src="https://opnform.com/widgets/iframe.min.js"></script>
+  
+
     </div>
 </div>
 
@@ -121,75 +59,5 @@ export async function post({ request }: { request: Request }) {
         }
     }
  </script>
-<!-- <script is:inline>
 
-
-
-const get = (id) => document.getElementById(id) || { value: '' }
-
-const submitForm = () => {
-    event.preventDefault()
-  sendmail()
-}
-
-
-const getFormData = () => {
-  const store = Object.create(null)
-  store.name = get('name').value
-  store.email = get('email').value
-  store.message = get('message').value
-
-  return store
-}
-
-
-
-const submitBtn = document.querySelector('[type="submit"]')
-submitBtn?.addEventListener('click', submitForm)
-;[...document.querySelectorAll('input')][0]?.focus()
-
-
-const sendmail = async () => { -->
-<!-- //   const { name, email, message } = getFormData()
-//   console.log(name, email, message);
-
-
-// const resend = new Resend('re_fFjp5bqe_H31YwJRNPsXXG3DNTkwoKwNe');
-
-// (async function () { -->
-<!-- //   const { data, error } = await resend.emails.send({ -->
-<!-- //     from: 'Acme <onboarding@resend.dev>',
-//     to: ['jonaherrera90@hotmail.com'],
-//     subject: 'Hello World',
-//     html: '<strong>It works!</strong>',
-//   });
-
-//   if (error) { -->
-<!-- //     return console.error({ error });
-//   }
-
-//   console.log({ data });
-// })();
-//   const data = await fetch('/api/sendmail.json', { -->
-<!-- //     method: 'POST',
-//     headers: { -->
-<!-- //       'Content-Type': 'application/json',
-//     },
-//     body: JSON.stringify({name, email, message }),
-//   })
-//     .then((res) => { -->
-<!-- //       if (!res.ok) { -->
-<!-- //         throw new Error(res.status.toString())
-//       }
-//       return res.json()
-//     })
-//     .catch((err) => { -->
-<!-- //       console.log('Error', err)
-//       throw new Error('Network error.')
-//     })
-//   console.log(data) 
-} -->
-
-
-<!-- </script> -->
 
