--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,10 @@
         <img class="logo w-12" src="/LogoJH.svg" alt="Astro logo" />
       <nav class="space-x-4">
         <a href="/" class="hover:text-complementario ">Inicio</a>
-        <a href="/" class="hover:text-complementario">Sobre mí</a>
-        <a href="/" class="hover:text-complementario">Proyectos</a>
-        <a href="/" class="hover:text-complementario">Contacto</a>
+        <a href="#About" class="hover:text-complementario">Sobre mí</a>
+        <a href="#proyectos" class="hover:text-complementario">Proyectos</a>
+        <a href="#Contact" class="hover:text-complementario">Contacto</a>
+
       </nav>
     </div>
   </header>
@@ -28,7 +29,10 @@ window.addEventListener('scroll', () => {
     }
   }
   lastScrollTop = scrollTop;
-});// Importing the JavaScript file
+});
+
+
+
   </script>
 
  
