--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,19 +14,14 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/LogoJH.svg" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/zlu1npw.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
@@ -39,7 +34,7 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
-  @font-face {
+  /* @font-face {
     font-family: "NavineDemo-SemiCondensed";
     src: url("../../public/fonts/NavineDemo-SemiCondensed.ttf") format("ttf");
     font-weight: normal;
@@ -56,21 +51,33 @@ const { title } = Astro.props;
       rgb(var(--accent-light)) 30%,
       white 60%
     );
-  }
-  html {
-    font-family: Montserrat, sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    background: -webkit-linear-gradient(
-      90deg,
-      #1f2d35,
-      #1d2b37
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      90deg,
-      #1f2d35,
-      #1d2b37
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+	} */
+
+  * {
+  box-sizing: border-box;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+ 
+	html, body {
+	min-height: 100vh;
+  height: 100%; 
+  margin: 0;  /* Elimina márgenes por defecto */
+  box-sizing: border-box; 
+}
+html {
+  margin: 0; /* Asegura que no haya márgenes en el body */
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  background: linear-gradient(90deg, #1f2d35, #1d2b37);
+  background-size: cover;
+}
+  p {
+	font-family: "Roboto";
   }
   h1 {
     font-family: "Bebas Neue", sans-serif;
@@ -89,6 +96,7 @@ const { title } = Astro.props;
   }
   code {
     font-family:
+	
       Menlo,
       Monaco,
       Lucida Console,
