--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -26,7 +26,7 @@
 </div>
 
 <!-- JavaScript para manejar el modal -->
- <script>
+ <script is:inline>
     const buttonOpen = document.getElementById('open');
     if (buttonOpen) {
         buttonOpen.addEventListener('click', () => {
