--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import myImage from '/image-ej.png';
+import myImage from '../assets/image-ej.png';
 ---
 <section  class="mt-36" >
 
