--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,4 +1,7 @@
-
+---
+import { Image } from 'astro:assets';
+import myImage from '../public/image-ej.png';
+---
 <section  class="mt-36" >
 
     <ul>
@@ -23,8 +26,8 @@
                 </div>
             </div>
             <div id="image-container" class="ml-4 absolute bottom-0 right-0 w-[500px] h-[300px] z-0" >
-                <img  src="https://drive.google.com/file/d/153HgL-QpoSsSLspmgQ99nATfx-8LBH38/view?usp=sharing" alt="Imagen del proyecto" class="w-full h-full object-cover ">
-
+                <!-- <img  src="https://drive.google.com/file/d/153HgL-QpoSsSLspmgQ99nATfx-8LBH38/view?usp=sharing" alt="Imagen del proyecto" class="w-full h-full object-cover "> -->
+                <Image src={myImage} alt="Imagen del proyecto" class="w-full h-full object-cover" />
             </div>
         </li>
 
