--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -28,7 +28,7 @@ import { Image } from 'astro:assets';
             <div id="image-container" class="ml-4 absolute bottom-0 right-0 w-[500px] h-[300px] z-0" >
                 <!-- <img  src="https://drive.google.com/file/d/153HgL-QpoSsSLspmgQ99nATfx-8LBH38/view?usp=sharing" alt="Imagen del proyecto" class="w-full h-full object-cover "> -->
                 <Image
-  src="/images/my-public-image.png"
+  src="/images/image-ej.png"
   alt="texto descriptivo"
   width="200"
   height="150"
