--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -28,10 +28,10 @@ import { Image } from 'astro:assets';
             <div id="image-container" class="ml-4 absolute bottom-0 right-0 w-[500px] h-[300px] z-0" >
                 <!-- <img  src="https://drive.google.com/file/d/153HgL-QpoSsSLspmgQ99nATfx-8LBH38/view?usp=sharing" alt="Imagen del proyecto" class="w-full h-full object-cover "> -->
                 <Image
-  src="/images/image-ej.png"
+  src="/images/Proyecto1.png"
   alt="texto descriptivo"
-  width="200"
-  height="150"
+   width={"500"},
+    height={"300"}
 />
             </div>
         </li>
@@ -39,7 +39,12 @@ import { Image } from 'astro:assets';
 
         <li class="flex items-start relative w-full h-[300px] justify-end mb-32">
             <div id="image-container" class="absolute top-0 left-0 w-[500px] h-[300px] z-0">
-                <img src="/public/image-ej.png" alt="Imagen del proyecto" class="w-full h-full object-cover">
+                <Image
+                src="/images/Proyecto2.png"
+                alt="texto descriptivo"
+                 width={"500"},
+                  height={"300"}
+              />
             </div>
             <div class="flex-1 max-w-[600px] ">
                 <h3 class="text-gray-300 text-2xl mb-4 justify-end flex">RentRide</h3>
@@ -87,7 +92,12 @@ import { Image } from 'astro:assets';
                     </div>
                 </div>
                 <div id="image-container" class="ml-4 absolute bottom-0 right-0 w-[500px] h-[300px] z-0" >
-                    <img src="/public/image-ej.png" alt="Imagen del proyecto" class="w-full h-full object-cover ">
+                    <Image
+                    src="/images/Proyecto3.png"
+                    alt="texto descriptivo"
+                     width={"500"},
+                      height={"300"}
+                  />
                 </div>
             </li>
         
