--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,12 +1,17 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
-import Header from "../components/Header.astro";
-import About from "../components/About.astro";
-import Footer from "../components/Footer.astro";
-import Proyectos from "../components/Proyectos.astro";
-import Lineas from "../components/Lineas.astro";
-import Form from "../components/Form.astro";
+import Layout from "../../layouts/Layout.astro";
+import "../../styles/global.css";
+import Header from "../../components/Header.astro";
+import About from "../../components/About.astro";
+import Footer from "../../components/About.astro";
+import Proyectos from "../../components/Proyectos.astro";
+import Lineas from "../../components/Lineas.astro";
+import Form from "../../components/Form.astro";
+
+import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <Layout title="Jonathan Herrera">
@@ -19,7 +24,7 @@ import Form from "../components/Form.astro";
     <div class="flex items-center justify-center min-h-screen -mt-10">
       <div>
         <span class="text-complementario tracking-wider font-medium mb-10"
-          >Hola, mi nombres es:</span
+          >{t('saludo')}</span
         >
         <h1 class="text-gray-200 text-8xl font-bold pb-4 pt-5 tracking-widest">
           Jonathan Herrera.
