Cambio de idioma

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,16 +1,22 @@
+---
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+---
 <div class="flex justify-center items-center p-14  text-gray-200 mb-32 " id="About">
     <div class="max-w-full">
       <h2 class="text-complementario text-3xl mb-4 relative inline-block font-bold after:content-[''] after:block after:w-full after:h-[2px] after:bg-complementario after:ml-4 after:mt-2">About Me </h2>
       <p class="text-lg leading-relaxed mb-4 text-gray-300">
        
 
-¡Hola! Soy Jonathan, un apasionado desarrollador de software con un enfoque en crear soluciones que hagan la vida de las personas más sencilla. Mi interés por la tecnología comenzó desde joven, cuando empecé a desarrollar pequeñas aplicaciones en la consola. Desde entonces, mi curiosidad no ha dejado de crecer, lo que me llevó a estudiar Ingeniería de Software y a buscar constantemente nuevos retos para mejorar mis habilidades.
+{t('aboutMe1')}
       </p>
       <p class="text-lg leading-relaxed mb-4 text-gray-300">
-        A lo largo de mi camino, me he especializado en tecnologías como Next.js y React, y me entusiasma poder crear aplicaciones con estas herramientas que ofrecen gran flexibilidad y rendimiento. Me gusta profundizar en estas tecnologías y aplicar buenas prácticas para construir soluciones robustas y escalables.
+        {t('aboutMe2')}
       </p>
       <p class="text-lg leading-relaxed mb-4 text-gray-300">
-        Mi enfoque principal es siempre mejorar la experiencia del usuario y desarrollar software que sea fácil de usar y accesible. Además, disfruto del trabajo en equipo y de colaborar para resolver problemas complejos de manera eficiente y creativa.
+        {t('aboutMe3')}
       </p>
       <ul class="pl-5 space-y-2 text-gray-300 grid grid-cols-2 gap-x-4 list-none mt-10" >
         
