Cambio de idioma4

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,7 +6,7 @@ const t = useTranslations(lang);
 ---
 <div class="flex justify-center items-center p-14  text-gray-200 mb-32 " id="About">
     <div class="max-w-full">
-      <h2 class="text-complementario text-3xl mb-4 relative inline-block font-bold after:content-[''] after:block after:w-full after:h-[2px] after:bg-complementario after:ml-4 after:mt-2">About Me </h2>
+      <h2 class="text-complementario text-3xl mb-4 relative inline-block font-bold after:content-[''] after:block after:w-full after:h-[2px] after:bg-complementario after:ml-4 after:mt-2">{t('sobreMiT')}</h2>
       <p class="text-lg leading-relaxed mb-4 text-gray-300">
        
 
