--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -8,7 +8,7 @@ const t = useTranslations(lang);
     <h2  class="text-complementario text-3xl mb-4 relative inline-block font-bold after:content-[''] after:block after:w-full after:h-[2px] after:bg-complementario after:ml-4 after:mt-2">{t('contact1')}</h2>
     <p class="text-center mt-4 text-lg mb-10 text-gray-300">{t('contact2')}</p>
     <button class="inline-block text-center w-40 h-16 border-2 border-gray-300 text-gray-300 font-semibold rounded-lg transform transition-all duration-300 hover:translate-y-[-4px] hover:shadow-lg hover:shadow-gray-300" id="open" >
-        Contacto
+        {t('botonC')}
     </button>
 </div>
 
